--- a/environment.yml
+++ b/environment.yml
@@ -5,13 +5,8 @@ dependencies:
     - python=3.*
     - cmake=3.18.*
     - eigen=3.3.*
-    - cython=0.29.*
-    - pandas=1.1.*
-    - scikit-learn=0.23.*
-    - setuptools=45.*
-    - shogun-cpp=6.1.4
-    - wheel=0.35.*
-    - pip=20.*
-    - pip:
-        - eigency==1.77
-        - pmlb==1.*
+    - gtest=1.10.0
+    # - pandas=1.1.*
+    # - scikit-learn=0.23.*
+    # - setuptools=45.*
+    # - wheel=0.35.*
