Fix vscode in gitignore and update conda environment

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,4 +6,5 @@
         "GTEST_LIBRARIES": "/home/bill/anaconda3/envs/brush/lib/libgtest.so"
     },
     "cmake.buildBeforeRun": true,
+    "python.pythonPath": "c:\\Users\\jdr2160\\Miniconda3\\envs\\brush\\python.exe",
 }
