--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,15 @@ build/
 *.exe
 *.out
 *.app
+
+
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+**/.history
