--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ requires = [
     "wheel",
     "scikit-build",
     "cmake",
-    "ninja"
+    "ninja",
+    "pybind11",
 ]
 build-backend = "setuptools.build_meta"
