--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@
 
 # set(CMAKE_CXX_COMPILER /usr/bin/g++-7)
 # version requirement for Eigen
-cmake_minimum_required (VERSION 3.0)
+cmake_minimum_required (VERSION 3.15...3.19)
 # use c++ 17
 set (CMAKE_CXX_STANDARD 17)
 
@@ -112,3 +112,20 @@ file(GLOB_RECURSE testsSrc "tests/*.cc")
 
 add_executable(tests ${testsSrc})
 target_link_libraries(tests brush ${GTEST_LIBRARIES} pthread)
+
+# generate python bindings
+find_package(Python COMPONENTS Interpreter Development REQUIRED)
+find_package(pybind11 CONFIG REQUIRED)
+
+message("Python_FOUND:${Python_FOUND}")
+message("Python_VERSION:${Python_VERSION}")
+message("Python_Development_FOUND:${Python_Development_FOUND}")
+message("Python_LIBRARIES:${Python_LIBRARIES}")
+
+find_package(PythonLibs REQUIRED)
+include_directories("${PYTHON_INCLUDE_DIRS}")
+target_link_libraries(brush ${PYTHON_LIBRARIES})
+
+#add_subdirectory(pybind11)
+pybind11_add_module(pybrush src/example.cc)
+target_compile_definitions(pybrush PRIVATE VERSION_INFO=${EXAMPLE_VERSION_INFO})
