Make a spot for python tests

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,8 @@ build/
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
 **/.history
+
+CMakeFiles/
+*.egg-info/*
+
+*__pycache__*
