changes from last edit. update to dx node, transformreduce, test

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,4 +6,5 @@
         "GTEST_LIBRARIES": "/home/bill/anaconda3/envs/brush/lib/libgtest.so"
     },
     "cmake.buildBeforeRun": true,
+    "python.pythonPath": "/home/bill/anaconda3/envs/brush/bin/python",
 }
