--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,11 @@
     "cmake.buildDirectory": "${workspaceFolder}/build/",
     "cmake.environment": {
         "EIGEN3_INCLUDE_DIR": "${env:CONDA_PREFIX}/include/eigen3/",
-        "GTEST_INCLUDE_DIRS": "${env:CONDA_PREFIX}/include/gtest/",
+        "GTEST_INCLUDE_DIRS": "${env:CONDA_PREFIX}/include/",
         "GTEST_LIBRARIES": "${env:CONDA_PREFIX}/lib/libgtest.so",
-        "pybind11_DIR": "${env:CONDA_PREFIX}/lib/python3.8/site-packages/pybind11/include/"
+        "pybind11_DIR": "${env:CONDA_PREFIX}/lib/python3.8/site-packages/pybind11/share/cmake/pybind11/",
+        "PYTHON_LIBRARIES": "${env:CONDA_PREFIX}/lib/libpython3.8.so",
+        "PYTHON_INCLUDE_DIRS": "${env:CONDA_PREFIX}/include/",
     },
     "cmake.buildBeforeRun": true,
     "python.pythonPath": "${env:CONDA_PREFIX}/bin/python",
