lots of  edits to the data class and associated methods

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,8 @@
     "cmake.buildBeforeRun": true,
     "python.pythonPath": "${env:CONDA_PREFIX}/bin/python",
     "files.associations": {
-        "type_traits": "cpp"
+        "type_traits": "cpp",
+        "string": "cpp",
+        "cmath": "cpp"
     },
 }
