--- a/environment.yml
+++ b/environment.yml
@@ -3,7 +3,7 @@ channels:
     - conda-forge
 dependencies:
     - python=3.8.2
-    - cmake=3.18.*
+    - cmake #=3.18.*
     - eigen=3.4.*
     - gtest=1.10.0
     - pybind11=2.6.2
