lots of updates: starts implementing parallelized and vectorized operators, hence new dependency on tbb; starting to combine Weighted and non-weighted DxNode class; currently stuck on the dx_op, which needs to return an iterable to be parallelized. current plan is to recode dx_op as a vector/array of functions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,14 @@
 #    endif()
 #endif()
 #############################################
-link_directories( $ENV{LD_LIBRARY_PATH} )
+get_cmake_property(_variableNames VARIABLES)
+list (SORT _variableNames)
+foreach (_variableName ${_variableNames})
+    message(STATUS "${_variableName}=${${_variableName}}")
+endforeach()
+link_directories( $ENV{LD_LIBRARY_PATH})
+link_directories( "/home/anaconda3/envs/brush/lib/")
+link_directories( $ENV{CONDA_LIB} )
 # set(CMAKE_CXX_COMPILER /usr/bin/g++-7)
 # version requirement for Eigen
 cmake_minimum_required (VERSION 3.15...3.19)
@@ -34,6 +41,9 @@ set (CMAKE_CXX_STANDARD 17)
   
 # project name
 project(brush)
+
+#
+
 
 # add Eigen include paths
 if (DEFINED ENV{EIGEN3_INCLUDE_DIR})
@@ -114,7 +124,7 @@ file(GLOB_RECURSE testsSrc "tests/*.cpp")
 message(STATUS "testsSrc: '${testsSrc}")
 
 add_executable(tests ${testsSrc})
-target_link_libraries(tests brush ${GTEST_LIBRARIES} pthread)
+target_link_libraries(tests brush ${GTEST_LIBRARIES} pthread tbb)
 
 # generate python bindings
 find_package(Python COMPONENTS Interpreter Development REQUIRED)
