--- a/environment.yml
+++ b/environment.yml
@@ -8,6 +8,7 @@ dependencies:
     - gtest=1.10.0
     - pybind11=2.6.2
     - ninja
+    - pytest=6.2.4
     # - pandas=1.1.*
     # - scikit-learn=0.23.*
     # - setuptools=45.*
