Build a Sphinx index page with pip and do a simple autodoc page

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,9 @@ requires = [
     "cmake",
     "ninja",
     "pybind11",
+    "sphinx",
+    "numpy",
+    "maisie_sphinx_theme",
+    "breathe"
 ]
 build-backend = "setuptools.build_meta"
