add doc packages to env

--- a/environment.yml
+++ b/environment.yml
@@ -13,3 +13,9 @@ dependencies:
     # - scikit-learn=0.23.*
     # - setuptools=45.*
     # - wheel=0.35.*
+    - pip
+    - pip:
+      # documentation
+      - pydot
+      - maisie_sphinx_theme
+      - breathe
