work on longitudinal operators

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "cmake.buildBeforeRun": true,
-    "cmake.buildDirectory": "${workspaceFolder}/build/",
+    "cmake.buildDirectory": "build/",
     "cmake.cmakePath": "${env:CONDA_PREFIX}/envs/brush/bin/cmake",
     "cmake.configureEnvironment": {
         // "EIGEN3_INCLUDE_DIR": "${env:CONDA_PREFIX}/include/eigen3/",
