work on node class

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "cmake.buildBeforeRun": true,
     "cmake.buildDirectory": "build/",
-    "cmake.cmakePath": "${env:CONDA_PREFIX}/envs/brush/bin/cmake",
+    "cmake.cmakePath": "${env:CONDA_PREFIX}/bin/cmake",
     "cmake.configureEnvironment": {
         // "EIGEN3_INCLUDE_DIR": "${env:CONDA_PREFIX}/include/eigen3/",
         "EIGEN3_INCLUDE_DIR": "${env:CONDA_PREFIX}/include/eigen3/",
