--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,7 @@ dependencies:
     - python #=3.8.2
     - cmake #=3.18.*
     - eigen #=3.4.*
-    # - gtest #=1.10.0
+    - gtest #=1.10.0
     - pybind11 #=2.6.2
     - ninja
     - tbb-devel #=2020.2
