--- a/environment.yml
+++ b/environment.yml
@@ -11,6 +11,7 @@ dependencies:
     - tbb-devel #=2020.2
     - pytest #=6.2.4
     - pydot
+    - fmt
     # - pandas=1.1.*
     # - scikit-learn=0.23.*
     # - setuptools=45.*
