--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,11 @@
 #endif()
 #############################################
 
+if (APPLE OR UNIX)
+   set(CMAKE_C_COMPILER   "/usr/bin/gcc")
+   set(CMAKE_CXX_COMPILER "/usr/bin/g++")
+endif()
+
 get_cmake_property(_variableNames VARIABLES)
 list (SORT _variableNames)
 foreach (_variableName ${_variableNames})
