--- a/environment.yml
+++ b/environment.yml
@@ -11,8 +11,10 @@ dependencies:
     - pytest #=6.2.4
     - pydot
     - fmt
+    - pip
+    - pip:
+      - sphinx
     # - pandas=1.1.*
     # - scikit-learn=0.23.*
     # - setuptools=45.*
     # - wheel=0.35.*
-  - sphinx
