--- a/environment.yml
+++ b/environment.yml
@@ -11,9 +11,12 @@ dependencies:
     - pytest #=6.2.4
     - pydot
     - fmt
+    - breathe
     - pip
     - pip:
       - sphinx
+      - Maisie-Sphinx-Theme
+      = pmlb
     # - pandas=1.1.*
     # - scikit-learn=0.23.*
     # - setuptools=45.*
