--- a/environment.yml
+++ b/environment.yml
@@ -16,7 +16,7 @@ dependencies:
     - pip:
       - sphinx
       - Maisie-Sphinx-Theme
-      = pmlb
+      - pmlb
     # - pandas=1.1.*
     # - scikit-learn=0.23.*
     # - setuptools=45.*
