--- a/environment.yml
+++ b/environment.yml
@@ -12,11 +12,14 @@ dependencies:
     - pydot
     - fmt
     - breathe
+    - jupyter
+    - ipython
     - pip
     - pip:
       - sphinx
       - Maisie-Sphinx-Theme
       - pmlb
+      - graphviz
     # - pandas=1.1.*
     # - scikit-learn=0.23.*
     # - setuptools=45.*
