--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,6 +22,30 @@
                     "ignoreFailures": true
                 }
             ],
-        }
+        },
+        {
+           "name": "(gdb) valgrind remote-target",
+           "type": "cppdbg",
+           "request": "launch",
+           "program": "./build/tests",
+           "targetArchitecture": "x64",
+           "customLaunchSetupCommands" : [
+               {
+                   "description": "Enable pretty-printing for gdb",
+                   "text": "-enable-pretty-printing",
+                   "ignoreFailures": true
+               },
+               {
+                 "description": "Attach to valgrind",
+                 "text": "target remote | /usr/lib64/valgrind/../../bin/vgdb",
+                 "ignoreFailures": false  
+               }
+           ],
+           "stopAtEntry": false,
+           "cwd": "${workspaceFolder}",
+           "environment": [],
+           "externalConsole": false,
+           "MIMode": "gdb"
+       }
     ]
 }
