--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -37,7 +37,7 @@
                },
                {
                  "description": "Attach to valgrind",
-                 "text": "target remote | /usr/lib64/valgrind/../../bin/vgdb",
+                 "text": "target remote | /usr/lib/x86_64-linux-gnu/valgrind/../../bin/vgdb",
                  "ignoreFailures": false  
                }
            ],
