--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "cmake.cmakePath": "${env:CONDA_PREFIX}/bin/cmake",
     "cmake.buildBeforeRun": true,
     "cmake.buildTask": true,
-    "cmake.buildDirectory": "build/",
+    "cmake.buildDirectory": "/home/bill/projects/brush/build/",
     "cmake.configureEnvironment": {
         // "EIGEN3_INCLUDE_DIR": "${env:CONDA_PREFIX}/include/eigen3/",
         "EIGEN3_INCLUDE_DIR": "${env:CONDA_PREFIX}/include/eigen3/",
