--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "cmake.cmakePath": "${env:CONDA_PREFIX}/bin/cmake",
     "cmake.buildBeforeRun": true,
-    "cmake.buildTask": true,
+    "cmake.buildTask": false,
     "cmake.buildDirectory": "/home/bill/projects/brush/build/",
     "cmake.configureEnvironment": {
         // "EIGEN3_INCLUDE_DIR": "${env:CONDA_PREFIX}/include/eigen3/",
