--- a/environment-clang.yml
+++ b/environment-clang.yml
@@ -6,8 +6,6 @@ dependencies:
     - cmake #=3.18.*
     - eigen #=3.4.*
     - fmt
-    - gcc >= 12.0 # [not osx]
-    - gxx >= 12.0 # [not osx]
     - clang >= 15.0.3 # [osx]
     - clangxx >= 15.0.3 # [osx]
     - gtest #=1.10.0
@@ -24,13 +22,10 @@ dependencies:
     - pydot
     - pytest #=6.2.4
     - python #=3.8.2
-    # - pandas=1.1.*
-    # - scikit-learn=0.23.*
-    # - setuptools=45.*
-    # - wheel=0.35.*
+    - doxygen
     - pip
     - pip:
-      # documentation
       - pydot
       - maisie_sphinx_theme
       - breathe
+      - doxygen
