update signatures a bit

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,7 +65,11 @@
         "typeinfo": "cpp",
         "utility": "cpp",
         "valarray": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "bitset": "cpp",
+        "iomanip": "cpp",
+        "ranges": "cpp",
+        "stop_token": "cpp"
     },
     "python.testing.pytestArgs": [
         "tests"
