Shift to WSL clang implementation for testing differences.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,7 +65,9 @@
         "typeinfo": "cpp",
         "utility": "cpp",
         "valarray": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "ranges": "cpp",
+        "execution": "cpp"
     },
     "python.testing.pytestArgs": [
         "tests"
