--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,11 +41,13 @@ list (SORT _variableNames)
 # endforeach()
 link_directories( $ENV{LD_LIBRARY_PATH})
 # set(CMAKE_CXX_COMPILER /usr/bin/g++-7)
+set(CMAKE_C_COMPILER "clang")
 set(CMAKE_CXX_COMPILER "clang++")
-set(CLANG_DEFAULT_CXX_STDLIB "libc++")
-message(STATUS "CLANG_DEFAULT_CXX_STDLIB=${CLANG_DEFAULT_CXX_STDLIB}")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
-set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -stdlib=libc++ -lc++abi")
+# set(CLANG_DEFAULT_CXX_STDLIB "libc++")
+# message(STATUS "CLANG_DEFAULT_CXX_STDLIB=${CLANG_DEFAULT_CXX_STDLIB}")
+# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
+# set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -stdlib=libc++ -lc++abi")
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lrt -lpthread")
 # version requirement for Eigen
 cmake_minimum_required (VERSION 3.15...3.19)
 # use c++ 20
