--- a/environment.yml
+++ b/environment.yml
@@ -18,6 +18,7 @@ dependencies:
       - Maisie-Sphinx-Theme
       - pmlb
       - sphinx
+      - furo
     - pybind11 #=2.6.2
     - pydot
     - pytest #=6.2.4
