--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,17 +2,13 @@
     "cmake.cmakePath": "${env:CONDA_PREFIX}/bin/cmake",
     "cmake.buildBeforeRun": true,
     "cmake.buildTask": false,
-    "cmake.buildDirectory": "/home/bill/projects/brush/build/",
+    "cmake.buildDirectory": "${workspaceFolder}/build",
     "cmake.configureEnvironment": {
-        // "EIGEN3_INCLUDE_DIR": "${env:CONDA_PREFIX}/include/eigen3/",
         "EIGEN3_INCLUDE_DIR": "${env:CONDA_PREFIX}/include/eigen3/",
         "GTEST_INCLUDE_DIRS": "${env:CONDA_PREFIX}/include/",
         "GTEST_LIBRARIES": "${env:CONDA_PREFIX}/lib/libgtest.so",
         "pybind11_DIR": "${env:CONDA_PREFIX}/lib/python3.8/site-packages/pybind11/share/cmake/pybind11/",
-        // "CONDA_LIB":  "${env:CONDA_PREFIX}/lib/"
-        "CONDA_LIB":  "/home/bill/anaconda3/envs/brush/lib/"
-        // "PYTHON_LIBRARIES": "${env:CONDA_PREFIX}/lib/libpython3.8.so",
-        // "PYTHON_INCLUDE_DIRS": "${env:CONDA_PREFIX}/include/",
+        "CONDA_LIB": "/home/bill/anaconda3/envs/brush/lib/"
     },
     "files.associations": {
         "type_traits": "cpp",
