--- a/environment.yml
+++ b/environment.yml
@@ -20,6 +20,7 @@ dependencies:
       - pmlb
       - sphinx
       - furo
+      - numpydoc
     - pybind11 #=2.6.2
     - pydot
     - pytest #=6.2.4
