--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,7 @@
         "GTEST_INCLUDE_DIRS": "${env:CONDA_PREFIX}/include/",
         "GTEST_LIBRARIES": "${env:CONDA_PREFIX}/lib/libgtest.so",
         "pybind11_DIR": "${env:CONDA_PREFIX}/lib/python3.8/site-packages/pybind11/share/cmake/pybind11/",
-        "CONDA_LIB": "/home/bill/anaconda3/envs/brush/lib/"
+        "CONDA_LIB": "${env:CONDA_PREFIX}/lib/"
     },
     "files.associations": {
         "type_traits": "cpp",
