Fix bugs in Forge config script

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -36,7 +36,7 @@ test:
     - pip check
 
 about:
-  home: https://github.com/lacava/brush
+  home: https://github.com/cavalab/brush
   summary: 
   description: |
     Brush is a strongly-typed genetic programming language. It is designed for
@@ -44,4 +44,4 @@ about:
   license: GPL-3.0-only
   license_file: LICENSE.txt
   # doc_url: UPDATE WHEN READY
-  dev_url: https://github.com/lacava/brush
+  dev_url: https://github.com/cavalab/brush
