--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -1,7 +1,7 @@
 find_package(Doxygen REQUIRED)
 find_package(Sphinx REQUIRED)
 
-get_target_property(BRUSH_PUBLIC_SOURCE_DIR brush INTERFACE_INCLUDE_DIRECTORIES)
+get_target_property(BRUSH_PUBLIC_SOURCE_DIR _brush INTERFACE_INCLUDE_DIRECTORIES)
 file(GLOB_RECURSE BRUSH_PUBLIC_HEADERS ${BRUSH_PUBLIC_SOURCE_DIR}/*.h)
 
 set(DOXYGEN_INPUT_DIR ${PROJECT_SOURCE_DIR}/src)
