--- a/environment.yml
+++ b/environment.yml
@@ -14,6 +14,7 @@ dependencies:
     - pybind11 #=2.6.2
     - pytest #=6.2.4
     - pydot
+    - scikit-learn
     # these are not required for install
     - jupyter
     - ipython
