--- a/environment.yml
+++ b/environment.yml
@@ -15,6 +15,7 @@ dependencies:
     - pytest #=6.2.4
     - pydot
     - scikit-learn
+    - pandas
     # these are not required for install
     - jupyter
     - ipython
