adds program guide/notebook

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,5 +1,4 @@
 sphinx
-nbsphinx
 sphinx-book-theme
 breathe
 jupyter
@@ -9,3 +8,4 @@ numpydoc
 myst-parser
 sphinx-copybutton
 sphinx-math-dollar
+myst-nb
