--- a/.gitignore
+++ b/.gitignore
@@ -220,3 +220,4 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+Doxyfile
