updates docs, adds doxygen

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,7 +65,10 @@
         "bitset": "cpp",
         "iomanip": "cpp",
         "ranges": "cpp",
-        "stop_token": "cpp"
+        "stop_token": "cpp",
+        "jacobi": "cpp",
+        "random": "cpp",
+        "mutex": "cpp"
     },
     "python.testing.pytestArgs": [
         "tests"
